// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ESelectDown > should work with \`size\` props 1`] = `
"<div class=\\"eu-select-down\\">
  <div class=\\"eu-select-down-control eu-select-down-control-xs\\" role=\\"listbox\\" tabindex=\\"0\\">
    <div class=\\"eu-select-down-control-placeholder\\"></div><input class=\\"eu-select-down-control-input\\">
    <!----><span class=\\"eu-icon down-icon\\" role=\\"link\\" tabindex=\\"0\\" style=\\"font-size: 20px;\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" width=\\"1em\\" height=\\"1em\\" viewBox=\\"0 0 32 32\\"><path fill=\\"currentColor\\" d=\\"M16 22L6 12l1.4-1.4l8.6 8.6l8.6-8.6L26 12z\\"></path></svg></span>
  </div>
  <transition-stub name=\\"slide-toggle\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
    <div class=\\"eu-select-down-panel\\" style=\\"display: none;\\" role=\\"listbox\\" tabindex=\\"0\\">
      <div class=\\"eu-select-down-panel-wrapper\\">
        <ul class=\\"panel scroll\\">
          <!---->
        </ul><span class=\\"down-arrow\\"></span>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ESelectDown > should work with \`size\` props 2`] = `
"<div class=\\"eu-select-down\\">
  <div class=\\"eu-select-down-control eu-select-down-control-sm\\" role=\\"listbox\\" tabindex=\\"0\\">
    <div class=\\"eu-select-down-control-placeholder\\"></div><input class=\\"eu-select-down-control-input\\">
    <!----><span class=\\"eu-icon down-icon\\" role=\\"link\\" tabindex=\\"0\\" style=\\"font-size: 20px;\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" width=\\"1em\\" height=\\"1em\\" viewBox=\\"0 0 32 32\\"><path fill=\\"currentColor\\" d=\\"M16 22L6 12l1.4-1.4l8.6 8.6l8.6-8.6L26 12z\\"></path></svg></span>
  </div>
  <transition-stub name=\\"slide-toggle\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
    <div class=\\"eu-select-down-panel\\" style=\\"display: none;\\" role=\\"listbox\\" tabindex=\\"0\\">
      <div class=\\"eu-select-down-panel-wrapper\\">
        <ul class=\\"panel scroll\\">
          <!---->
        </ul><span class=\\"down-arrow\\"></span>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ESelectDown > should work with \`size\` props 3`] = `
"<div class=\\"eu-select-down\\">
  <div class=\\"eu-select-down-control eu-select-down-control-md\\" role=\\"listbox\\" tabindex=\\"0\\">
    <div class=\\"eu-select-down-control-placeholder\\"></div><input class=\\"eu-select-down-control-input\\">
    <!----><span class=\\"eu-icon down-icon\\" role=\\"link\\" tabindex=\\"0\\" style=\\"font-size: 20px;\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" width=\\"1em\\" height=\\"1em\\" viewBox=\\"0 0 32 32\\"><path fill=\\"currentColor\\" d=\\"M16 22L6 12l1.4-1.4l8.6 8.6l8.6-8.6L26 12z\\"></path></svg></span>
  </div>
  <transition-stub name=\\"slide-toggle\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
    <div class=\\"eu-select-down-panel\\" style=\\"display: none;\\" role=\\"listbox\\" tabindex=\\"0\\">
      <div class=\\"eu-select-down-panel-wrapper\\">
        <ul class=\\"panel scroll\\">
          <!---->
        </ul><span class=\\"down-arrow\\"></span>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ESelectDown > should work with \`size\` props 4`] = `
"<div class=\\"eu-select-down\\">
  <div class=\\"eu-select-down-control eu-select-down-control-lg\\" role=\\"listbox\\" tabindex=\\"0\\">
    <div class=\\"eu-select-down-control-placeholder\\"></div><input class=\\"eu-select-down-control-input\\">
    <!----><span class=\\"eu-icon down-icon\\" role=\\"link\\" tabindex=\\"0\\" style=\\"font-size: 20px;\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" width=\\"1em\\" height=\\"1em\\" viewBox=\\"0 0 32 32\\"><path fill=\\"currentColor\\" d=\\"M16 22L6 12l1.4-1.4l8.6 8.6l8.6-8.6L26 12z\\"></path></svg></span>
  </div>
  <transition-stub name=\\"slide-toggle\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
    <div class=\\"eu-select-down-panel\\" style=\\"display: none;\\" role=\\"listbox\\" tabindex=\\"0\\">
      <div class=\\"eu-select-down-panel-wrapper\\">
        <ul class=\\"panel scroll\\">
          <!---->
        </ul><span class=\\"down-arrow\\"></span>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ESelectDown > should work with \`size\` props 5`] = `
"<div class=\\"eu-select-down\\">
  <div class=\\"eu-select-down-control eu-select-down-control-xl\\" role=\\"listbox\\" tabindex=\\"0\\">
    <div class=\\"eu-select-down-control-placeholder\\"></div><input class=\\"eu-select-down-control-input\\">
    <!----><span class=\\"eu-icon down-icon\\" role=\\"link\\" tabindex=\\"0\\" style=\\"font-size: 20px;\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" width=\\"1em\\" height=\\"1em\\" viewBox=\\"0 0 32 32\\"><path fill=\\"currentColor\\" d=\\"M16 22L6 12l1.4-1.4l8.6 8.6l8.6-8.6L26 12z\\"></path></svg></span>
  </div>
  <transition-stub name=\\"slide-toggle\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
    <div class=\\"eu-select-down-panel\\" style=\\"display: none;\\" role=\\"listbox\\" tabindex=\\"0\\">
      <div class=\\"eu-select-down-panel-wrapper\\">
        <ul class=\\"panel scroll\\">
          <!---->
        </ul><span class=\\"down-arrow\\"></span>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ESelectDown > should work with keydown event 1`] = `
"<div class=\\"eu-select-down\\">
  <div class=\\"eu-select-down-control eu-select-down-control-md\\" role=\\"listbox\\" tabindex=\\"0\\">
    <div class=\\"eu-select-down-single\\">1</div><input class=\\"eu-select-down-control-input\\">
    <!----><span class=\\"eu-icon down-icon translate-icon\\" role=\\"link\\" tabindex=\\"0\\" style=\\"font-size: 20px;\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" width=\\"1em\\" height=\\"1em\\" viewBox=\\"0 0 32 32\\"><path fill=\\"currentColor\\" d=\\"M16 22L6 12l1.4-1.4l8.6 8.6l8.6-8.6L26 12z\\"></path></svg></span>
  </div>
  <transition-stub name=\\"slide-toggle\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
    <div class=\\"eu-select-down-panel\\" style=\\"display: inline-block;\\" role=\\"listbox\\" tabindex=\\"0\\">
      <div class=\\"eu-select-down-panel-wrapper\\">
        <ul class=\\"panel scroll\\">
          <li class=\\"select-down-option\\" value=\\"1\\">1</li>
          <li class=\\"select-down-option\\" value=\\"2\\">2</li>
        </ul><span class=\\"down-arrow\\"></span>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ESelectDown > should work with keydown event 2`] = `
"<div class=\\"eu-select-down\\">
  <div class=\\"eu-select-down-control eu-select-down-control-md\\" role=\\"listbox\\" tabindex=\\"0\\">
    <div class=\\"eu-select-down-single\\">1</div><input class=\\"eu-select-down-control-input\\">
    <!----><span class=\\"eu-icon down-icon\\" role=\\"link\\" tabindex=\\"0\\" style=\\"font-size: 20px;\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" width=\\"1em\\" height=\\"1em\\" viewBox=\\"0 0 32 32\\"><path fill=\\"currentColor\\" d=\\"M16 22L6 12l1.4-1.4l8.6 8.6l8.6-8.6L26 12z\\"></path></svg></span>
  </div>
  <transition-stub name=\\"slide-toggle\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
    <div class=\\"eu-select-down-panel\\" style=\\"display: none;\\" role=\\"listbox\\" tabindex=\\"0\\">
      <div class=\\"eu-select-down-panel-wrapper\\">
        <ul class=\\"panel scroll\\">
          <li class=\\"select-down-option\\" value=\\"1\\">1</li>
          <li class=\\"select-down-option\\" value=\\"2\\">2</li>
        </ul><span class=\\"down-arrow\\"></span>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`ESelectDown > should work with slot and modelValue 1`] = `
"<div class=\\"eu-select-down\\">
  <div class=\\"eu-select-down-control eu-select-down-control-md\\" role=\\"listbox\\" tabindex=\\"0\\">
    <div class=\\"eu-select-down-single\\">1</div><input class=\\"eu-select-down-control-input\\">
    <!----><span class=\\"eu-icon down-icon\\" role=\\"link\\" tabindex=\\"0\\" style=\\"font-size: 20px;\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" width=\\"1em\\" height=\\"1em\\" viewBox=\\"0 0 32 32\\"><path fill=\\"currentColor\\" d=\\"M16 22L6 12l1.4-1.4l8.6 8.6l8.6-8.6L26 12z\\"></path></svg></span>
  </div>
  <transition-stub name=\\"slide-toggle\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
    <div class=\\"eu-select-down-panel\\" style=\\"display: none;\\" role=\\"listbox\\" tabindex=\\"0\\">
      <div class=\\"eu-select-down-panel-wrapper\\">
        <ul class=\\"panel scroll\\">
          <li class=\\"select-down-option\\" value=\\"1\\">1</li>
          <li class=\\"select-down-option\\" value=\\"2\\">2</li>
        </ul><span class=\\"down-arrow\\"></span>
      </div>
    </div>
  </transition-stub>
</div>"
`;
